2016-02-26 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs.tcl: merging changes done in trunk

2015-12-14 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs/asciiglyphs.tcl: removed debugging lines
    
2015-12-09 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs.tcl: character selection mechanism amended
    * doc/xml/commands.xml: documenting ::rivet::try

2015-12-07 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs/asciiglyphs.tcl: new file renamed after
    hexglyphs.tcl which now prints more than the hexadecimal character set

2015-12-05 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/try.tcl: new command ::rivet::try wraps core
    same command to trap ::rivet::abort_code and ::rivet::exit interruptions
    * rivet/rivet-tcl/catch.tcl: using [uplevel] to control Tcl core [catch] 
    command (as it's been customary with Tcl ever since)
    * rivet/init.tcl: modified to remove ::rivet::try from the export list

2015-12-02 Massimo Manghi <mxmanghi@apache.org>
    * doc/images/*.png, doc/rivet.css: styles and navigation items color
    changed to mark the difference with Rivet 2.2 and Rivet 2.1
    * doc/xml/commands.xml,intro.xml: new commands ::rivet::exit and
    ::rivet::catch documented
    * rivet/init.tcl: new version 2.3 of package Rivet
 
2015-11-27 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: version number increased to 2.3.0

2015-11-25 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: add macro RIVET_EXPORT_COMMAND (wraps Tcl_Export)
    * src/librivet/rivet[WWW|List|Crypt].c: proper way to put these commands
    on the export list
    * src/rivetcmds/rivetCore.c: Commands are now put explicitly on the
    export list (if build with --enable-rivet-commands-export)
    * rivet/init.tcl: removed -force switch when importing the ::rivet command
    set. Rationalization of Tcl commands export list